--- a/src/main/resources/templates/pizzeria/ingredienti.html
+++ b/src/main/resources/templates/pizzeria/ingredienti.html
@@ -3,6 +3,8 @@
   <head>
 	<!-- Bootstrap CSS -->
 	    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}"/>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <title>Ingredienti pizza</title> 
   </head>
   <body>
@@ -25,8 +27,18 @@
 	    
 <!--		INSERIRE LISTA ELENCO OFFERTE SPECIALI-->
 <div th:if="${pizza.offerte.size() > 0 } ">	
-		<ul th:each="item : ${offerte}">
-			<li th:text="${item.titoloOfferta}"></li>
+	
+		<ul th:each="item : ${pizza.offerte}">
+			<li style="display:inline; list-style:none; text-align:left;" th:text="${item.titoloOfferta}"></li>
+			<a th:href="@{|/offerte/edit/${item.id}|}" 	class="btn btn-primary"><i class="bi bi-pencil-square"></i></a>
+			<!--						  pulsante delete-->
+								 						<a style="display:inline-block;"><form action="#" th:action="@{|/offerte/delete/${item.id}|}" method="post">
+								 						<button class="btn btn-danger" type="submit" id="submitbutton"
+								 						th:data-confirm-delete="|Sei sicuro di voler cancellare?|" 
+								 						onclick="if(!confirm(this.getAttribute('data-confirm-delete'))) return false">
+								 							<i class="bi bi-trash3"></i>							
+								 						</button>							
+								 						</form>					</a>
 		</ul>
 </div>
 
@@ -35,7 +47,8 @@
 </div>
 	
 </div>		
-	    <a th:href="@{|/pizzeria/${pizza.id}/offerte|}" class="card-link">Aggiungi Offerta Speciale a questa pizza</a>
+<!--	    <a th:href="@{|/pizzeria/${pizza.id}/offerte|}" class="card-link">Aggiungi Offerta Speciale a questa pizza</a>-->
+		<a th:href="@{|/offerte/create/${pizza.id}|}" class="card-link">Aggiungi Offerta Speciale a questa pizza</a>
 	  </div>
 	</div>   
 </div>
