--- a/src/main/resources/templates/offerte/edit.html
+++ b/src/main/resources/templates/offerte/edit.html
@@ -64,7 +64,7 @@
 				</form>	  
 	<div class="mt-4 mb-4">
 							<!--				tornale al dettaglio pizza -->
-							<a th:href="@{|/pizzeria/ingredienti/${pizza.id}|}" class="btn btn-success">Torna al dettaglio della pizza</a>
+							<a th:href="@{|/pizzeria/ingredienti/${id}|}" class="btn btn-success">Torna al dettaglio della pizza</a>
 					</div>
 				<div class="mt-4 mb-4">
 												<!--				tornale menu pizze -->
