--- a/src/main/resources/templates/pizzeria/index.html
+++ b/src/main/resources/templates/pizzeria/index.html
@@ -43,7 +43,13 @@
 						<!--				bottone inserisci una nuova pizza -->
 						<a th:href="@{/pizzeria/create}" class="btn btn-success">Inserisci una nuova pizza <i class="bi bi-plus-circle"></i></a>
 					  </div>
-
+					  <!--bottone inserisci un nuovo ingrediente -->
+					  				  <div class="mt-4 mb-4">
+					  				  <a th:href="@{/ingredienti/create}" class="btn btn-info">
+					  					Inserisci un nuovo ingrediente 
+					  					<i class="bi bi-plus-circle"></i>
+					  				  </a>
+					  				  </div>
 						
 			</div>
 		    </div>	    
