--- a/src/main/resources/templates/ingredienti/index.html
+++ b/src/main/resources/templates/ingredienti/index.html
@@ -43,6 +43,12 @@
 			
 			<img class="card-img-top" alt="ingredienti pizze"	
 			th:src="@{/img/ingredienti-foto.jpg}">
+			
+			<!--bottone torna alle pizze -->
+			<div class="mt-4 mb-4">
+				<a th:href="@{/pizzeria/index}" class="btn btn-success">
+					Torna alle pizze <i class="bi bi-arrow-return-left"></i></a>
+		    </div>
 		</div>
 		<div class="col m-4 text-center">
 
@@ -53,6 +59,18 @@
 				<ul th:each=" ingredienti : ${listaingredienti}">
 					<li th:text="${ingredienti.nomeIngrediente}">
 						
+					</li>
+					<li>
+						<!--pulsante delete-->
+						<a style="display:inline-block;">
+							<form action="#" th:action="@{'/ingredienti/delete/{id}' (id=${ingredienti.id}) }" method="post">
+						<button class="btn btn-danger" type="submit" id="submitbutton"
+							th:data-confirm-delete="|Sei sicuro di voler cancellare ${ingredienti.nomeIngrediente}?|" 
+							onclick="if(!confirm(this.getAttribute('data-confirm-delete'))) return false">
+							<i class="bi bi-trash3"></i>							
+						</button>							
+							</form>
+						</a>
 					</li>
 				</ul>
 				
