commit correction on create pizza template
added ingredienti select checklist

--- a/src/main/resources/templates/pizzeria/create.html
+++ b/src/main/resources/templates/pizzeria/create.html
@@ -50,7 +50,7 @@
 										<th:block th:each="associaIngrediente : ${ingredientiDB}" >
 											<input type="checkbox" name="ingrediente" 
 											th:value="${associaIngrediente.id}" 
-											th:field="*{ingredientiDB}"/>
+											th:field="*{listaIngredienti}"/>
 											<label th:text="${associaIngrediente.nomeIngrediente}"></label>
 										</th:block>
 						 		    </div>
