correction ingredients list in pizza details

--- a/src/main/resources/templates/pizzeria/ingredienti.html
+++ b/src/main/resources/templates/pizzeria/ingredienti.html
@@ -71,10 +71,10 @@
 	</div>   
 </div>
 
-<div th:each="ingredienti : ${pizza.listaIngredienti}">
 	<h6>Ingredienti associati alla pizza:</h6>
+<div th:each="ingredienti : ${pizza.listaIngredienti}">
 		<ul>
-			<li th:text="${ingredienti.checkIngrediente}"></li>
+			<li th:text="${ingredienti.nomeIngrediente}"></li>
 		</ul>
 </div>
 		
